feat: handle absences for delegated user and implement services CRUD
